2004-07-05   Andras Varga

	* csimplemodule.h, cenvir.h, envirext.h: recordScalar() functions for
	text and cStatistic data removed. A cStatistic object can be recorded
	into the scalar file by calling its recordScalar() method (below).

	* cstat.h: added recordScalar() method.

2004-06-24  Andras Varga

	* cpar.h: added type M (XML element) to cPar. New methods:
	setXMLValue(cXMLElement*), cXMLElement *xmlValue(), op=(cXMLElement*),
	op cXMLElement*().

2004-06-22  Andras Varga

	* added cxmlelement.cc

2004-06-17  Andras Varga

	* added cconfig.h: contains cConfiguration, an abstract base class
	for configuration managers. cConfiguration makes it possible to
	use different sources than omnetpp.ini, e.g. database or XML.
	See ChangeLog in src/envir.

	* cenvir.h: added method cConfiguration *config(). This lets e.g.
	scheduler classes (see cScheduler) have entries in omnetpp.ini.

2004-06-07  ------ omnetpp-3.0a5 released ------

2004-05-15  ------ omnetpp-3.0a4 released ------

FIXME todo: create parsim/ (and nedxml/?) subdirectories here
std::string for info() and fullPath()
cMessage: change prio() from int to short (2 bytes less)
add deleteGate()

2004-05-10   Andras Varga

	* carray.h,cllist.h: discouraged use of classes cBag and cLinkedList.
	STL classes such as std::vector, std::list or std::deque are
	recommended instead.

2004-04-20   Andras Varga

	* cobject.h, cpolymorphic.h: moved createDescriptor() into cPolymorphic

2004-04-13   Andras Varga

	* cenvir.h: added method bool cEnvir::disabled(); returns true when
	ev<< output is disabled (e.g. Express mode) so executing ev<< is
	a waste of CPU cycles. To save CPU cycles, one can write code like:
	   if (!ev.disabled())
	       ev << "Packet " << msg->name() << " received\n";
	or (not that ?: binds looser than <<!!!):
	   #define EV  ev.disabled()?ev:ev
	   EV << "Packet " << msg->name() << " received\n";

	* cmessage.h: added possibility to attach a "control info" object